upload das ultimas config
